# blog_data_analyst

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  VERTICAL_SLICE_PLAN.md  demo_phase1.py  design.md  plan.md  pyproject.toml  test_content_generation.py
.github/instructions/: blog_instructions.instructions.md
docs/: blog_image_generator.md  blog_reviewer.md
inputs/: example_input.yaml
src/: __init__.py  main.py
src/agent/: __init__.py  __main__.py  config.py  graph.py  key_manager.py  nodes.py  punchy_examples.py  state.py  tools.py
src/config/: __init__.py  settings.py
src/converters/: __init__.py  md_to_html.py
src/generation/: __init__.py  code_generator.py  content_generator.py  diagram_generator.py  metadata_generator.py  title_generator.py
src/media/: __init__.py  blog_image_generator.py  image_embedder.py  image_generator.py
src/optimization/: __init__.py  quality_checker.py  seo_optimizer.py
src/parsers/: __init__.py  yaml_parser.py
src/planning/: __init__.py  outline_generator.py  outline_reviewer.py  question_generator.py
src/refinement/: __init__.py  blog_refiner.py  blog_reviewer.py
src/research/: __init__.py  content_extractor.py  search_agent.py
src/utils/: __init__.py  file_handler.py  key_manager.py  llm_helpers.py  logger.py
tests/: __init__.py  test_azure_openai_integration.py  test_blog_image_generator.py  test_blog_image_generator_integration.py  test_blog_reviewer.py  test_blog_reviewer_integration.py  test_config.py  test_content_generator.py  test_converters.py  test_diagram_generator.py  test_diagram_generator_integration.py  test_eeat_review.py  test_generation.py  test_image_embedder.py  test_image_embedder_integration.py  test_key_manager.py  test_metadata_generator.py  test_optimization.py  test_outline_eeat_review.py  test_outline_fallback.py  test_parsers.py  test_planning.py  test_planning_outline.py  test_planning_reviewer.py  test_prompt_no_diagrams.py  test_research.py  test_utils.py
tests/fixtures/: sample_input.yaml
tests/integration/: __init__.py  test_assembly_integration.py  test_cli_integration.py  test_content_landscape_integration.py  test_full_flow_demo.py  test_full_graph.py  test_planning_integration.py  test_preview_validation_integration.py  test_research_integration.py  test_section_selection_integration.py  test_tools_integration.py  test_topic_discovery_integration.py  test_writing_integration.py
tests/unit/: test_assembly.py  test_cli.py  test_config.py  test_content_landscape.py  test_graph.py  test_key_manager.py  test_landscape_analysis.py  test_planning.py  test_preview_validation.py  test_research.py  test_section_selection.py  test_state.py  test_tools.py  test_topic_discovery.py  test_validate_sources.py  test_writing.py  test_writing_dynamic_research.py
